Bug where there is extra space on right side of vercel.app

--- a/styles/general.css
+++ b/styles/general.css
@@ -4,6 +4,10 @@
     padding: 0;
 }
 
+section {
+    width: 100%;
+}
+
 html {
     scroll-behavior: smooth;
 }
